SUBDIRS = $(ESIDL) include os $(TOOLS) $(INIT) $(CMD) esjs
DIST_SUBDIRS = esidl include os tools init cmd esjs

EXTRA_DIST = \
	setup \
	LICENSE \
	NOTICE \
	patches/README \
	patches/automake-1.10.patch \
	patches/binutils-2.16.1.patch \
	patches/binutils-2.17.patch \
	patches/binutils-2.18.patch \
	patches/binutils-2.19.patch \
	patches/gcc-4.1.0.patch \
	patches/gcc-4.1.1.patch \
	patches/gcc-4.2.1.patch \
	patches/gcc-4.3.1.patch \
	patches/newlib-1.14.0.patch \
	patches/newlib-1.15.0.patch \
	patches/newlib-1.16.0.patch \
	patches/pcre-7.1.patch \
	patches/pcre-7.2.patch \
	patches/pcre-7.8.patch \
	patches/freetype-2.3.4.patch \
	patches/freetype-2.3.5.patch \
	patches/expat-2.0.1.patch \
	patches/fontconfig-2.4.2.patch \
	patches/cairo-1.8.6.patch \
	patches/pixman-0.15.10.patch \
	patches/libxml2-2.7.3.patch \
	patches/jpegsrc.v7.patch \
	patches/icu-4.2.1.patch

