SUBDIRS = $(ESIDL) include os $(TOOLS) $(INIT) $(CMD) esjs
DIST_SUBDIRS = esidl include os tools init cmd esjs

EXTRA_DIST = \
	setup \
	LICENSE \
	NOTICE \
	patches/README \
	patches/binutils-2.21.1.patch \
	patches/cairo-1.8.6.patch \
	patches/expat-2.0.1.patch \
	patches/fontconfig-2.4.2.patch \
	patches/freetype-2.3.5.patch \
	patches/gcc-4.6.1.patch \
	patches/icu-4.2.1.patch \
	patches/jpegsrc.v7.patch \
	patches/libpng-1.2.40.patch \
	patches/libxml2-2.7.3.patch \
	patches/newlib-1.16.0.patch \
	patches/pcre-8.12.patch \
	patches/pixman-0.22.2.patch

