TESTS_ENVIRONMENT = ../esjs
TESTS = 1.js 2.js 3.js 4.js 5.js 6.js 7.js 8.js 9.js 10.js \
	11.js 12.js 13.js 14.js 15.js 16.js 17.js 18.js 19.js 20.js \
	21.js 22.js 23.js 24.js 25.js 26.js 27.js 28.js 29.js 30.js \
	31.js 32.js 33.js 34.js 35.js 36.js 37.js 38.js 39.js 40.js \
	41.js 42.js 43.js 44.js 45.js 46.js 47.js 48.js 49.js 50.js \
	51.js 52.js 53.js 54.js 55.js 56.js 57.js 58.js 59.js       \
	61.js 62.js 63.js 64.js       66.js 67.js

EXTRA_DIST = $(TESTS) 60.js 65.js
